Fix contact link spacing

--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,8 @@ section.project-item {
 
 .contact-links {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  width: 60vw;
 }
 
 .contact {
@@ -69,7 +70,7 @@ h1.job-title {
 a.contact-link {
   width: 8vw;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   color: black;
   text-decoration: none;
@@ -77,10 +78,12 @@ a.contact-link {
 }
 
 a.contact-link:hover {
-  color: blue;
+  color: white;
+  text-decoration: underline;
 }
 
 img.contact-logo {
   width: 20px;
   height: 20px;
+  margin-right: 5px;
 }
